rev 168 fix line wrapping on issue cover gallery

--- a/branches/prototype/pydjango/media/css/gcd/default.css
+++ b/branches/prototype/pydjango/media/css/gcd/default.css
@@ -230,6 +230,7 @@ table#covers td.marked {
 
 .cover_links {
     font-size: 0.7em;
+    white-space: nowrap;
 }
 
 .cover_caption {
